# wafer

./: Cargo.toml
.github/workflows/: rust.yml
src/: font.rs  lib.rs  renderer.rs
src/term/: cell.rs  grid.rs
