[package]
name = "wafer"
version = "0.1.0"
authors = ["Edward Wibowo <wibow9770@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wafer"
path = "src/bin/wafer/main.rs"

[dependencies]
quick-error = "2.0.0"
font-kit = "0.10.0"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["ttf"]
